# Intro2ros

./: .gitignore  Autonomous_Quadruped.pptx  Guide.txt  README.md
AutonomousQuadruped/: README.md
AutonomousQuadruped/src/controller_key_control/: CMakeLists.txt  package.xml
AutonomousQuadruped/src/controller_key_control/src/: key_control.cpp
AutonomousQuadruped/src/controller_pkg/: CMakeLists.txt  package.xml
AutonomousQuadruped/src/controller_pkg/launch/: keyboard.launch
AutonomousQuadruped/src/controller_pkg/src/: control_with_keyboard.cpp  controller_node.cpp  direct_move.cpp  state_machine_node.cpp
AutonomousQuadruped/src/depth_camera_subscriber/: CMakeLists.txt  package.xml
AutonomousQuadruped/src/depth_camera_subscriber/launch/: depth_camera_subscriber.launch
AutonomousQuadruped/src/depth_camera_subscriber/src/: depth_camera_subscriber.cpp
AutonomousQuadruped/src/depth_image_proc/launch/: pointcloud_test.launch
AutonomousQuadruped/src/goal_publisher/: CMakeLists.txt  package.xml
AutonomousQuadruped/src/goal_publisher/launch/: goal_publisher.launch
AutonomousQuadruped/src/goal_publisher/src/: goal_publisher_node.cpp
AutonomousQuadruped/src/key_board/src/: keyboard.cpp
AutonomousQuadruped/src/octomap_server/cfg/: rviz_config.rviz
AutonomousQuadruped/src/octomap_server/launch/: octomap.launch
AutonomousQuadruped/src/octomap_to_2Dmap/: CMakeLists.txt  package.xml
AutonomousQuadruped/src/octomap_to_2Dmap/launch/: octomap_to_2Dmap.launch
AutonomousQuadruped/src/octomap_to_2Dmap/src/: octomap_to_2Dmap.cpp
AutonomousQuadruped/src/octomap_without_z/: CMakeLists.txt  package.xml
AutonomousQuadruped/src/octomap_without_z/launch/: octomap_without_z.launch  perception.launch  point_cloud.launch  simulation.launch
AutonomousQuadruped/src/path_height_checker/: CMakeLists.txt  package.xml
AutonomousQuadruped/src/path_height_checker/launch/: path_height_checker.launch
AutonomousQuadruped/src/path_height_checker/msg/: PathHeightStatus.msg  PathHeightStatusArray.msg
AutonomousQuadruped/src/path_height_checker/src/: path_height_checker.cpp  path_height_checker_node.cpp
AutonomousQuadruped/src/path_occupancy_checker/: CMakeLists.txt  package.xml
AutonomousQuadruped/src/path_occupancy_checker/launch/: path_occupancy_checker.launch
AutonomousQuadruped/src/path_occupancy_checker/src/: path_occupancy_checker.cpp
AutonomousQuadruped/src/perception/: CMakeLists.txt  package.xml
AutonomousQuadruped/src/perception/config/: rviz_config.rviz
AutonomousQuadruped/src/perception/launch/: filtered_cloud.launch  octomap.launch  perception.launch  point_cloud.launch  simulation.launch
AutonomousQuadruped/src/planning/: CMakeLists.txt  package.xml
AutonomousQuadruped/src/planning/launch/: planning.launch
AutonomousQuadruped/src/planning/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml
AutonomousQuadruped/src/planning/src/: planning_node.cpp
AutonomousQuadruped/src/point_cloud_filter/: CMakeLists.txt  package.xml
AutonomousQuadruped/src/point_cloud_filter/src/: point_cloud_filter_node.cpp
AutonomousQuadruped/src/simulation/: CMakeLists.txt
AutonomousQuadruped/src/simulation/launch/: run.launch  simulation.launch  unity_ros.launch
AutonomousQuadruped/src/simulation/src/: state_estimate_corruptor_node.cpp  w_to_unity.cpp
