<?xml version="1.0"?>
<package format="2">
  <name>controller_key_control</name>
  <version>0.0.0</version>
  <description>The UAV key control package</description>
  <maintainer email="antonap@mit.edu">Pasquale Antonante</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>tf_conversions</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mav_msgs</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>tf_conversions</exec_depend>

  <export>
  </export>
</package>

