<?xml version="1.0"?>
<package format="2">
  <name>perception</name>
  <version>0.0.0</version>
  <description>The perception package</description>

  <maintainer email="upendra@todo.todo">upendra</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>octomap_server</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>octomap_server</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>octomap_server</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>octomap_ros</depend>
  <depend>depth_image_proc</depend>

  <export>
  </export>
</package>
