<?xml version="1.0"?>
<package format="2">
  <name>planning</name>
  <version>0.0.0</version>
  <description>The planning package</description>
  <maintainer email="ge26mod@tum.de">yd</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>LinearMath</build_depend>
  <build_export_depend>Eigen3</build_export_depend>
  <build_export_depend>eigen_conversions</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>mav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>LinearMath</build_export_depend>
  <exec_depend>Eigen3</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>LinearMath</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>